# trading

MarketAgent/: .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
MarketAgent/app/: main.py
MarketAgent/app/analysis/: engine.py
MarketAgent/app/cli/: commands.py
MarketAgent/app/core/: config.py  database.py
MarketAgent/app/models/: schemas.py
MarketAgent/app/services/: alerts.py  market.py  news.py  tracker.py
MarketAgent/app/utils/: resilience.py  visualization.py
MarketAgent/docs/: index.md  reference.md
MarketAgent/scripts/: backtest.py
