[tool.poetry]
name = "MarketAgent"
version = "0.1.0"
description = "Autonomous stock market analysis CLI using LLMs."
authors = ["Toan Le <briantoanle@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"
pydantic = "^2.7.1"
pandas = "^2.3.3"
openai = "^1.25.2"
yfinance = "^0.2.37"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pandas-ta = { url = "https://www.pandas-ta.dev/assets/zip/pandas_ta-0.4.19b0.zip" }
duckduckgo-search = "5.3.1b1"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.18"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
market-agent = "app.main:app"

