[tool.poetry]
name = "MarketAgent"
version = "0.1.0"
description = "Autonomous stock market analysis CLI using LLMs."
authors = ["Toan Le <briantoanle@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"
pydantic = "^2.8.2"
pandas = "^2.3.3"
numpy = ">=2.0,<2.3"
openai = "^1.40.0"
yfinance = "^0.2.40"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pandas-ta = "^0.4.71b0"
duckduckgo-search = "^6.1.0"
pydantic-settings = "^2.12.0"
loguru = "^0.7.2"
tenacity = "^8.2.3"
sqlmodel = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.18"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
market-agent = "app.main:app"

